# checkers

./: CMakeLists.txt
src/Components/: Board.hpp  Button.hpp  TextBox.hpp
src/Engine/: CellType.hpp  Controller.cpp  Controller.hpp  State.cpp  State.hpp  StateController.hpp  Types.hpp  Utils.hpp
src/Forms/: FinishForm.hpp  Form.hpp  HomeForm.hpp  MainForm.hpp  PlayForm.hpp
src/GUI/: Form.cpp  Form.hpp  Window.cpp  Window.hpp
src/Main/: Bridge.hpp  Fonts.hpp  Main.cpp
